testdata/baselines/reference/submodule/compiler/redeclareParameterInCatchBlock.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
redeclareParameterInCatchBlock.ts(4,11): error TS2492: Cannot redeclare identifier 'e' in catch clause.
redeclareParameterInCatchBlock.ts(10,9): error TS2492: Cannot redeclare identifier 'e' in catch clause.
redeclareParameterInCatchBlock.ts(16,11): error TS2488: Type '[number, number]' must have a '[Symbol.iterator]()' method that returns an iterator.
redeclareParameterInCatchBlock.ts(16,15): error TS2492: Cannot redeclare identifier 'b' in catch clause.
redeclareParameterInCatchBlock.ts(21,15): error TS2451: Cannot redeclare block-scoped variable 'x'.
redeclareParameterInCatchBlock.ts(21,15): error TS2451: Cannot redeclare block-scoped variable 'x'.
redeclareParameterInCatchBlock.ts(21,21): error TS2451: Cannot redeclare block-scoped variable 'x'.
redeclareParameterInCatchBlock.ts(21,21): error TS2451: Cannot redeclare block-scoped variable 'x'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== redeclareParameterInCatchBlock.ts (8 errors) ====
    try {
    
    } catch(e) {
        const e = null;
              ~
!!! error TS2492: Cannot redeclare identifier 'e' in catch clause.
    }
    
    try {
    
    } catch(e) {
        let e;
            ~
!!! error TS2492: Cannot redeclare identifier 'e' in catch clause.
    }
    
    try {
    
    } catch ([a, b]) {
        const [c, b] = [0, 1];
              ~~~~~~
!!! error TS2488: Type '[number, number]' must have a '[Symbol.iterator]()' method that returns an iterator.
                  ~
!!! error TS2492: Cannot redeclare identifier 'b' in catch clause.
    }
    
    try {
    
    } catch ({ a: x, b: x }) {
                  ~
!!! error TS2451: Cannot redeclare block-scoped variable 'x'.
                  ~
!!! error TS2451: Cannot redeclare block-scoped variable 'x'.
                        ~
!!! error TS2451: Cannot redeclare block-scoped variable 'x'.
                        ~
!!! error TS2451: Cannot redeclare block-scoped variable 'x'.
    
    }
    
    try {
    
    } catch(e) {
        function test() {
            let e;
        }
    }
    